--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 <p>Grams: <span id="outputGrams"></span></p>
 /* When the input field receives input, convert the value from pounds to kilograms */
 function weightConverter(valNum) {
-  document.getElementById("outputGrams").innerHTML = valNum / 0.0022046;
+  document.getElementById("outputKilograms").innerHTML = valNum / 0.0022046;
 }
