--- a/index.html
+++ b/index.html
@@ -8,3 +8,17 @@
 function weightConverter(valNum) {
   document.getElementById("outputKilograms").innerHTML = valNum / 0.0022046;
 }
+
+<!--output field-->
+<p>Pounds: <span id="Pounds"></span></p>
+<p>Ounces: <span id="Ounces"></span></p>
+<p>Grams: <span id="Grams"></span></p>
+<p>Stones: <span id="Stones"></span></p>
+
+  //function that evaluate the value and returns result
+    function kiloweightConvert(value) {
+      document.getElementById("Pounds").innerHTML=value*2.2046;
+      document.getElementById("Ounces").innerHTML=value*35.274;
+      document.getElementById("Grams").innerHTML=value*1000;
+      document.getElementById("Stones").innerHTML=value*0.1574;
+    }
