--- a/index.html
+++ b/index.html
@@ -1,43 +1,4 @@
-<style>
-  span {
-      color: Green;
-  }
-</style>
-
-<!-- Title of your Converter -->
-<h2 style="color: Green;">Weight Converter</h2>
-
-<p>Enter a value in the Kilograms field to convert :</p>
-
-
-
-<p>
-  <!-- label the input field -->
-  <label>Kilograms</label>
-  <!-- input tag for enter the data -->
-  <!-- kiloweightConvert function call
-       function kiloweightConvert to evaluate value-->
-  <input id="Kilograms" type="number" placeholder="kilograms" 
-         oninput="kiloweightConvert(this.value)" 
-         onchange="kiloweightConvert(this.value)" />
-</p>
-
-<!-- output field-->
-<p>Pounds: <span id="Pounds"></span></p>
-<p>Ounces: <span id="Ounces"></span></p>
-<p>Grams: <span id="Grams"></span></p>
-<p>Stones: <span id="Stones"></span></p>
-
-<script>
-  //function that evaluates the weight and return result
-         function kiloweightConvert(value) {
-             document.getElementById("Pounds").innerHTML =
-               value * 2.2046;
-             document.getElementById("Ounces").innerHTML =
-               value * 35.274;
-             document.getElementById("Grams").innerHTML =
-               value * 1000;
-             document.getElementById("Stones").innerHTML =
-               value * 0.1574;
-         }
-</script>
+function convertPoundsToKilograms(pounds)
+function takes in pounds
+var kilograms = pounds * 0.453592
+return kilograms
