--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-import java.io.*;
-import java.util.*;
+<!DOCTYPE html>
+<html>
+<title>Pounds to Kilograms Weight Converter</title>
+<body>
 
-class PoundsTokg{
-  public static void main (String[] args)throws Exception{
-  //1 Pounds = 0.45 Kg;
-  BufferedReader bf = new BufferedReader(new 
-  InputStreamReader(System.in));
-  System.out.println("Enter the Pounds:");
-  int pound = Integer.parseInt(bf.readLine());
-  double kilo = pound * 0.45;
-  System.out.println("Kilo: " + kilo);
-  }
+<h2>Weight Converter</h2>
+<p>Type a value in the Pounds field to convert the value to Kilograms:</p>
+
+<p>
+  <label>Pounds</label>
+  <input id="inputPounds" type="number" placeholder="Pounds" oninput="weightConverter(this.value)" onchange="weightConverter(this.value)">
+</p>
+<p>Kilograms: <span id="outputKilograms"></span></p>
+
+<script>
+function weightConverter(valNum) {
+  document.getElementById("outputKilograms").innerHTML=valNum/2.2046;
 }
+</script>
+
+</body>
+</html>
