--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 
 <title>Pounds to Kilograms Weight Converter</title>
-<body style="background-color:rgb(34,139,34);">
+   <style>
+      body {
+         background-color: rgb(34,139,34));
+      }
 
 <h2>Weight Converter</h2>
 <p>Type a value in the Pounds field to convert the value to Kilograms:</p>
