--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <title>Pounds to Kilograms Weight Converter</title>
    <style>
-      body {
-         background-color: rgb(34,139,34));
-      }
+      <body>
 
 <h2>Weight Converter</h2>
 <p>Type a value in the Pounds field to convert the value to Kilograms:</p>
