--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script>
 function weightConverter(valNum) {
-  document.getElementById("outputKilograms").innerHTML=valNum/2.2046226218;
+  document.getElementById("outputKilograms").innerHTML=valNum/2.20462;
 }
 </script>
 
